# lightPDF

./: .gitignore  AdBanner.jsx  App.jsx  Cargo.toml  EULA.txt  LICENSE.md  LicenseModal.jsx  PRIVACY_POLICY.md  PRIVACY_POLICY.txt  PreviewPane.jsx  QUICKSTART.md  Sidebar.jsx  TERMS_OF_SERVICE.md  TERMS_OF_SERVICE.txt  Viewer.jsx  index.html  license.rs  main.rs  package-lock.json  package.json  release.yml  tauri.conf.json  vite.config.js
.github/workflows/: release.yml
docs/: index.html
icons/: icon.icns
